# feature-homework_10_1

./: README.md  clear  pyproject.toml
src/: main.py  masks.py  processing.py  widget.py
