[tool.poetry]
name = "pythonproject10-1"
version = "0.1.0"
description = ""
authors = ["Dmitry <dima.soin2014@yandex.ru>"]
readme = "README.md"
packages = [{include = "pythonproject10"}]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
