[tool.poetry]
name = "pythonproject10.1"
version = "0.1.0"
description = ""
authors = ["Dmitry <dima.soin2014@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
black = "^25.1.0"

[tool.flake8]
max-line-length = 79

[tool.black]
line-length = 79
exclude = ".git|venv"

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = [
    "venv"
]

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
isort = "^6.0.1"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
